--- a/report.html
+++ b/report.html
@@ -3,6 +3,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/page.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/global.css" tppabs="http://www.infinite.net.cn/css/global.css" />
+	<script type="text/javascript" src="Public/js/respond.src.js"></script>
 	<header data-block-type="headers" data-id="1">
 	<div class="container">
 		<nav class="navbar navbar-expand-md no-gutters">
