--- a/vedio.html
+++ b/vedio.html
@@ -60,7 +60,7 @@
     <p> </p>
 	<h2 style="font-size: 24px;">海报</h2>
 	<br>
-	<img src="Public/images/poster.png">
+	<img src="img/poster.png">
 	
 </div>
 
