--- a/report.html
+++ b/report.html
@@ -35,8 +35,8 @@
 	</div>
 	</header>
 <body>
-	<div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.1;background-color: orange;">
-	</div>
+	<!--<div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.1;background-color: orange;">
+	</div>-->
 		
 		<div class="solution_banner">
         <div class="solution_banner_main">
