--- a/vedio.html
+++ b/vedio.html
@@ -35,8 +35,6 @@
     </div>
     </header>
 <body>
-    <div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.1;background-color: orange;">
-	</div>
 	
 <div class="service_banner">
     <div class="service_banner_main">
@@ -60,8 +58,14 @@
     <p> </p>
 	<h2 style="font-size: 24px;">海报</h2>
 	<br>
-	<img src="Public/images/poster.png">
-	
+	<img src="img/poster.png">
+    <br/><br/>
+	<br>
+	<h2> </h2>
+	<h2> </h2>
+	<h2> </h2>
+    <p> </p>
+    <p> </p>
 </div>
 
 
