--- a/report.html
+++ b/report.html
@@ -3,6 +3,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/page.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/global.css" tppabs="http://www.infinite.net.cn/css/global.css" />
+	<script type="text/javascript" src="js/respond.src.js"></script>
 	<header data-block-type="headers" data-id="1">
 	<div class="container">
 		<nav class="navbar navbar-expand-md no-gutters">
@@ -34,10 +35,7 @@
 	</div>
 	</header>
 <body>
-	<div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.1;background-color: orange;">
-		
-		</div>
-		
+			
 		<div class="solution_banner">
         <div class="solution_banner_main">
             <h1>阶段任务报告</h1>
