--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
             
         <div style="text-align: center;"><img src="img/team.png"></div>
 
+        <link rel="stylesheet" href="css/bootstrap.min.css"/>
         <section class="footer-1">
           <div class="container1">
             <div class="media-container-row align-center">
